--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.6.2
   font_awesome_flutter: ^10.1.0
   freezed: ^2.1.0+1
   get_it: ^7.2.0
@@ -21,17 +22,38 @@ dependencies:
   very_good_analysis: ^3.0.1
 dev_dependencies:
   build_runner: ^2.2.0
+  flutter_gen: ^4.3.0
+  flutter_gen_runner: ^4.3.0
+  flutter_launcher_icons: ^0.10.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   injectable_generator: ^1.5.4
   json_serializable: ^6.3.1
-
   lint: ^1.10.0
+
+flutter_gen:
+  output: lib/core/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
+  web:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    background_color: "#hexcode"
+    theme_color: "#FFFFFF"
+  windows:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
+    - assets/icons/
   fonts:
     - family: sfmono
       fonts:
