--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 ---
 name: hizonchristian
-description: A new Flutter project.
+description: Portfolio of Christian Hizon. He worked on several development projects, taught students, and collaborated with talented people to create applications for both business and consumer use. I'm quietly confident, naturally curious and perpetually working on improving my skills as a developer
 publish_to: none
 version: 1.0.0+1
 environment:
